--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ section{
 /* PROFILE SECTION */
 
 #profile{
+    position: relative;
     display: flex;
     justify-content: center;
     gap: 5rem;
@@ -292,6 +293,7 @@ section{
     margin-bottom: 2rem;
     margin-top: 2rem;
     gap: 2rem;
+    flex-wrap: wrap;
 }
 
 .about-details-container{
@@ -355,28 +357,47 @@ section{
     margin: auto 0;
 }
 
-.skill-section{
-    margin-top: 4rem;
-    margin-left: -1.1rem;
+/* SKILLS */
+
+#skills{
+    position: relative;
+    height: 80vh;
 }
 
 .skill-icon{
     cursor: pointer;
-    height: 4rem;
+    height: 7rem;
+    width: 7rem;
 }
 
 .skill-box{
     display: flex;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+    justify-content: center;
 }
 
 .skill-container{
-    display: grid;
-    margin: 1rem;
-}
-  
-.skill-text {
-    opacity: 0;
+    display: flexbox;
+    flex-direction: column;
+    margin-top: 0.7rem;
+    margin-bottom: 0.7rem;
+    justify-content: center;
+    align-content: center;
     text-align: center;
+}
+
+.skill-subtext{
+    font-size: small;
+}
+
+.skill-text{
+    text-decoration: underline;
+    font-style: italic;
+}
+
+.skill-text, .skill-subtext{
+    opacity: 0;
     transform: translateY(20px);
     transition: opacity 0.4s ease, transform 0.4s ease;
 }
@@ -387,4 +408,58 @@ section{
     font-style: italic;
     transform: translateY(0);
 }
-  
+
+.skill-container:hover .skill-subtext {
+    opacity: 1;
+    font-size: small;
+    transform: translateY(0);
+}
+
+/* PROJECTS */
+
+#projects{
+    position: relative;
+}
+
+.color-container{
+    display: flexbox;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+    text-align: center;
+
+    padding: 0.5rem;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+}
+
+.projects-img{
+    border-radius: 2rem;
+    margin: 0.5rem;
+    width: 20rem;
+    height: 20rem;
+}
+
+.project-title{
+    margin: 1rem;
+    color: black;
+}
+
+.project-btn{
+    color: black;
+    border-color: rgb(163, 163, 163);
+    margin-bottom: 0.3rem;
+    margin-top: 0.3rem;
+}
+
+.project-text{
+    max-width: 400px;
+}
+
+.experience-btns{
+    justify-content: center;
+    display: flex;
+    gap: 1rem;
+}
