--- a/style.css
+++ b/style.css
@@ -438,13 +438,18 @@ section{
 .projects-img{
     border-radius: 2rem;
     margin: 0.5rem;
-    width: 20rem;
-    height: 20rem;
+    width: 15rem;
+    height: 15rem;
 }
 
 .project-title{
-    margin: 1rem;
+    margin: 0.2rem;
+    max-width: 330px;
+    height: 74px;
     color: black;
+    align-content: center;
+    text-decoration: underline;
+    text-decoration-thickness: 0.7x;
 }
 
 .project-btn{
@@ -455,11 +460,61 @@ section{
 }
 
 .project-text{
-    max-width: 400px;
+    max-width: 357px;
 }
 
 .experience-btns{
     justify-content: center;
     display: flex;
     gap: 1rem;
+}
+
+/* CONTACT */
+
+#contact{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container{
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    background: rgb(250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+
+.contact-info-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p{
+    font-size: larger;
+}
+
+.contact-icon{
+    cursor: default;
+}
+
+.email-icon{
+    height: 2.5rem;
+}
+
+/* FOOTER SECTION */
+
+footer{
+    height: 26vh;
+    margin: 0.1rem;
+}
+
+footer p{
+    text-align: center;
 }
