--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -51,6 +51,10 @@
         height: 50vh;
     }
 
+    .mini-italic{
+        display: none;
+    }
+
     .skill-icon{
         height: 50px;
         width: 50px;
