Fixed the mobile nav issue

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -17,8 +17,11 @@
     #experience, .experience-details-container{
         margin-top: 2rem;
     }
-    #profile, .section-container{
+    .section-container{
         display: block;
+    }
+
+    #profile{
         position: static;
     }
 
