Finally fixed mmobile nav issue

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -17,7 +17,7 @@
     #experience, .experience-details-container{
         margin-top: 2rem;
     }
-    .section-container{
+    #profile, .section-container{
         display: block;
     }
 
