--- a/flaskblog/templates/admin.html
+++ b/flaskblog/templates/admin.html
@@ -8,48 +8,43 @@
           What would you like to create?
         </legend>
         <div class="form-group">
-          {{ form.title.label(class="form-control-label") }}
-
-          {% if form.title.errors %}
-          {{ form.title(class="form-control form-control-lg is-invalid") }}
+          {{ form.title.label(class="form-control-label") }} {% if
+          form.title.errors %} {{ form.title(class="form-control form-control-lg
+          is-invalid") }}
           <div class="invalid-feedback">
             {% for error in form.title.errors %}
             <span>{{ error }}</span>
             {% endfor %}
           </div>
 
-          {% else %}
-          {{ form.title(class="form-control form-control-lg") }}
-          {% endif %}
+          {% else %} {{ form.title(class="form-control form-control-lg") }} {%
+          endif %}
         </div>
         <div class="form-group">
-          {{ form.content.label(class="form-control-label") }}
-
-          {% if form.content.errors %}
-          {{ form.content(class="form-control form-control-lg is-invalid") }}
+          {{ form.content.label(class="form-control-label") }} {% if
+          form.content.errors %} {{ form.content(class="form-control
+          form-control-lg is-invalid") }}
           <div class="invalid-feedback">
             {% for error in form.content.errors %}
             <span>{{ error }}</span>
             {% endfor %}
           </div>
 
-          {% else %}
-          {{ form.content(class="form-control form-control-lg") }}
-          {% endif %}
+          {% else %} {{ form.content(class="form-control form-control-lg") }} {%
+          endif %}
         </div>
         <div class="form-group">
-          {{ form.media.label(class="form-control-label") }}
-          {% if form.media.errors %}
-          {{ form.media(class="form-control form-control-lg is-invalid") }}
+          {{ form.media.label(class="form-control-label") }} {% if
+          form.media.errors %} {{ form.media(class="form-control form-control-lg
+          is-invalid") }}
           <div class="invalid-feedback">
             {% for error in form.media.errors %}
             <span>{{ error }}</span>
             {% endfor %}
           </div>
 
-          {% else %}
-          {{ form.media(class="form-control form-control-lg") }}
-          {% endif %}
+          {% else %} {{ form.media(class="form-control form-control-lg") }} {%
+          endif %}
         </div>
       </fieldset>
       <div class="form-group">
