--- a/flaskblog/templates/blog.html
+++ b/flaskblog/templates/blog.html
@@ -21,9 +21,9 @@
   <div class="post-text">
     {% if post.title %}
     <h2 class="post-title">{{ post.title }}</h2>
-    {% endif %}
-    <p class="post-content">{{ post.content|safe }}</p>
+    {% endif %} {{ post.content|safe }}
   </div>
+  <p class="post-date">{{ post.date_created }}</p>
 </div>
 {% endfor %} {% else %}
 <div class="no-post">
