--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -45,6 +45,7 @@
           <li><a href="/#skills">Skills</a></li>
           <li><a href="/#projects">Projects</a></li>
           <li><a href="/#contact">Contact</a></li>
+          <li><a href="/blog">Blog</a></li>
         </ul>
       </div>
     </nav>
@@ -78,6 +79,7 @@
           <li><a href="/#skills">Skills</a></li>
           <li><a href="/#projects">Projects</a></li>
           <li><a href="/#contact">Contact</a></li>
+          <li><a href="/blog">Blog</a></li>
         </div>
       </div>
     </nav>
@@ -94,6 +96,7 @@
             <li><a href="/#skills">Skills</a></li>
             <li><a href="/#projects">Projects</a></li>
             <li><a href="/#contact">Contact</a></li>
+            <li><a href="/blog">Blog</a></li>
           </ul>
         </div>
       </nav>
