--- a/flaskblog/templates/admin.html
+++ b/flaskblog/templates/admin.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %} {% block content %}
 <section id="post">
   <div class="post-form">
-    <form method="POST" action="">
+    <form method="POST" action="" enctype="multipart/form-data">
       {{ form.hidden_tag() }}
       <fieldset class="form-group">
         <legend class="border-bottom mb-4">
@@ -34,17 +34,14 @@
           endif %}
         </div>
         <div class="form-group">
-          {{ form.media.label(class="form-control-label") }} {% if
-          form.media.errors %} {{ form.media(class="form-control form-control-lg
-          is-invalid") }}
-          <div class="invalid-feedback">
-            {% for error in form.media.errors %}
-            <span>{{ error }}</span>
-            {% endfor %}
-          </div>
+          {{ form.media.label() }}
+          {{ form.media(class='form-control-file') }}
 
-          {% else %} {{ form.media(class="form-control form-control-lg") }} {%
-          endif %}
+          {% if form.media.errors %}
+            {% for error in form.media.errors %}
+             <span class="text-danger">{{ error }}</span><br>
+            {% endfor %}
+          {% endif %}
         </div>
       </fieldset>
       <div class="form-group">
