Tidied up small stuff

--- a/flaskblog/templates/index.html
+++ b/flaskblog/templates/index.html
@@ -140,7 +140,7 @@
             <h2 class="experience-subtitle project-title">AI Powered texteditor</h2>
             <p class="project-text">A text editor with AI powered paraphrasing, summary and content generation</p>
             <div class="experience-btns">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/the-jola-amodu/Project-Lytrally'">Github</button>
               <button class="btn btn-color-2 project-btn" onclick="location.href='./#projects'">Live Demo</button>
             </div>
           </div>
