--- a/flaskblog/templates/index.html
+++ b/flaskblog/templates/index.html
@@ -126,6 +126,11 @@
             <p class="skill-text">Git</p>
             <p class="skill-subtext">1 year experience, Intermediate👌</p>
           </div>        
+          <div class="skill-container">
+            <img src="{{ url_for('static', filename='assets/icons/atom.png') }}" alt="react icon from flaticon" class="skill-icon">
+            <p class="skill-text">React</p>
+            <p class="skill-subtext">1 year experience, Intermediate👌</p>
+          </div>        
         </div>
          </div>
       <img src="{{ url_for('static', filename='assets/icons/arrow.png') }}" alt="arrow down" class="icon arrow" onclick="location.href='./#projects'">
@@ -141,7 +146,7 @@
             <p class="project-text">A text editor with AI powered paraphrasing, summary and content generation</p>
             <div class="experience-btns">
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/the-jola-amodu/Project-Lytrally'">Github</button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./#projects'">Live Demo</button>
+              <button disabled class="btn btn-color-2 project-btn" onclick="location.href='./#projects'">Live Demo</button>
             </div>
           </div>
           <div class="color-container">
@@ -149,8 +154,26 @@
             <h2 class="experience-subtitle project-title">Interface for DJI Tello Drones</h2>
             <p class="project-text">Drone control with 3 DoF, live video feed, image capture, face detection and tracking</p>
             <div class="experience-btns">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">Github</button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./#projects'">Live Demo</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/the-jola-amodu/Drone-Programming-with-Python-tkinter-interface'">Github</button>
+              <button disabled class="btn btn-color-2 project-btn" onclick="location.href='./#projects'">Live Demo</button>
+            </div>
+          </div>
+          <div class="color-container">
+            <img src="{{ url_for('static', filename='assets/icons/project3.png') }}" alt="project-2" class="projects-img">
+            <h2 class="experience-subtitle project-title">Chef Claude</h2>
+            <p class="project-text">Generate recipes based on ingredients you have available to you!</p>
+            <div class="experience-btns">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/the-jola-amodu/React-mini-projects'">Github</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://sous-chef-claude.netlify.app/'">Live Demo</button>
+            </div>
+          </div>
+          <div class="color-container">
+            <img src="{{ url_for('static', filename='assets/icons/project4.png') }}" alt="project-2" class="projects-img">
+            <h2 class="experience-subtitle project-title">React mini games</h2>
+            <p class="project-text">Need a break? Try out one of these mini games!</p>
+            <div class="experience-btns">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://swe-endgame.netlify.app/'">Assembly Endgame</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://ten-die-tenzies.netlify.app/'">Tenzies</button>
             </div>
           </div>
           </div>
