Updated to include recent project

--- a/flaskblog/templates/index.html
+++ b/flaskblog/templates/index.html
@@ -159,7 +159,7 @@
             </div>
           </div>
           <div class="color-container">
-            <img src="{{ url_for('static', filename='assets/icons/project3.png') }}" alt="project-2" class="projects-img">
+            <img src="{{ url_for('static', filename='assets/icons/project3.png') }}" alt="project-3" class="projects-img">
             <h2 class="experience-subtitle project-title">Chef Claude</h2>
             <p class="project-text">Generate recipes based on ingredients you have available to you!</p>
             <div class="experience-btns">
@@ -168,12 +168,21 @@
             </div>
           </div>
           <div class="color-container">
-            <img src="{{ url_for('static', filename='assets/icons/project4.png') }}" alt="project-2" class="projects-img">
+            <img src="{{ url_for('static', filename='assets/icons/project4.png') }}" alt="project-4" class="projects-img">
             <h2 class="experience-subtitle project-title">React mini games</h2>
             <p class="project-text">Need a break? Try out one of these mini games!</p>
             <div class="experience-btns">
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://swe-endgame.netlify.app/'">Assembly Endgame</button>
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://ten-die-tenzies.netlify.app/'">Tenzies</button>
+            </div>
+          </div>
+          <div class="color-container">
+            <img src="{{ url_for('static', filename='assets/icons/project5.png') }}" alt="project-5" class="projects-img">
+            <h2 class="experience-subtitle project-title">Gemini + RAG</h2>
+            <p class="project-text">A RAG pipeline that feeds Gemini API with information sourced from my portfolio and LinkedIn (ethically, yes)</p>
+            <div class="experience-btns">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/the-jola-amodu/React-Project-1'">Github</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://jairag.vercel.app/'">Live Demo</button>
             </div>
           </div>
           </div>
